tests/e2e/arg_name_shorthand_error2.error
Error: syntax error in story at line 5, column 1

5|    test(:arg + 2)
      ^^^^^^^^^

E0118: Function `test` requires arguments to be named
