tests/e2e/arg_name_shorthand_error2.story
function test arg:int
    return

arg = 0
test(:arg + 2)
